--- a/research_notes/notes/dpd20210213.md
+++ b/research_notes/notes/dpd20210213.md
@@ -1,5 +1,5 @@
 #### [HOME](../../index.html) [CONTENTS](../index.html)
-## Parameters in DPD (Dissipative Particle Dynamics) model and the units conversation
+## Parameters in DPD (Dissipative Particle Dynamics) model and the units conversion
 
 *by Yawei Liu  @Sydney, Australia 2020/01/16*
 
@@ -22,7 +22,7 @@ between bead $i$ and $j$.
 * $\Delta t$: the simulation time step.
 * $r_c$: the cutoff distance, and also can be treated as the size (diameter) of the DPD bead.
 
-### Determine paramters
+### Determining paramters
 * $r_c$, $k_BT$, $m$ (bead mass) and $\tau$ (time)
 In simulations, the reduced units are often used. For DPD model, all units are often scaled by the length unit $r_c$, the mass unit $m$, the energy unit $k_BT$, and the time unit $\tau$. Hence, $r_c^* = m^* = (k_BT)^* =\tau^* =1$ in the simulations. The superscript asterisk ($^*$) means the quality is in reduced units. Units of other quantities are from these four basic units. For example, the unit for the mass density is $m/r_c^3$, the unit for the diffusion constant is $r_c^2/\tau$.
 * $\rho$ (density)
@@ -37,8 +37,8 @@ However, above choice for $\Delta t$ and $\gamma$ yields very small Schmidt numb
 
 * **There is no unique way to determine the parameters for DPD model.** For a given physical problem, with a characteristic length scale, we may always put a given number of DPD particles and parametrize the model in order to recover some macroscopic information (e.g. compressibilities, viscosity and diffusion constant).
 
-### Units conversation
-The conversation between DPD units ($r_c$, $k_BT$, $m$ and $\tau$) and real units ([m], [J], [kg] and [s]) is obtained from the key macroscopic information recovered by the model. If quantities in DPD units are labeled with $_{sim}$ and in real units are labeled with $_{real}$, one would have
+### Units  conversion
+The conversion between DPD units ($r_c$, $k_BT$, $m$ and $\tau$) and real units ([m], [J], [kg] and [s]) is obtained from the key macroscopic information recovered by the model. If quantities in DPD units are labeled with $_{sim}$ and in real units are labeled with $_{real}$, one would have
 
 * $m=N_m M_{real}/N_A$ with $M_{real}$ the mole mass of the fluid (e.g. water) and $N_A$ the Avogadro constant.
 * $r_c=(m\rho_{sim}/\rho_{real})^{1/3}$ with $\rho_{real}$ the mass density of the fluid.
